flux/clusters/dev-k8s/spring-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring  
  namespace: my-application   
spec:
  replicas: 1             
  selector:
    matchLabels:
      app: backend      
  template:
    metadata:
      labels:
        app: backend    
    spec:
      containers:
      - image: chedi1/spring:v1.0.0
        imagePullPolicy: Always 
        name: spring                           
        ports:
        - containerPort: 8081
        volumeMounts:
        - mountPath: /log
          name: log-volume 
      volumes:
      - name: log-volume
        hostPath:
          path: /var/log/webapp
          type: DirectoryOrCreate
