flux/clusters/dev-k8s/spring-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service       
  namespace: my-application
spec:
  selector:
    app: backend         
  ports:
  - protocol: TCP
    port: 80                 
    targetPort: 8081        
    nodePort: 30000          
  type: NodePort
