flux/clusters/dev-k8s/spring-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: my-application
spec:
  ingressClassName: nginx
  rules:
  - host: backend.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: spring-service
            port:
              number: 80
